fix for spacing on mobile search buttons

--- a/web/themes/custom/asulib_barrio/scss/components/search-form.scss
+++ b/web/themes/custom/asulib_barrio/scss/components/search-form.scss
@@ -72,7 +72,7 @@ nav [id^="search-form"] {
 }
 
 @media (max-width: 768px) {
-    #search-form--2 .form-submit {
+    [id^="search-form"] .form-submit, .repo-search .form-submit {
         margin: .5rem 0;
     }
 }
